--- a/recipes/ncl/meta.yaml
+++ b/recipes/ncl/meta.yaml
@@ -19,7 +19,7 @@ requirements:
     build:
         - gcc
         - libnetcdf 4.4.*
-        - proj.4 4.9.3
+        - proj4 4.9.3
         - gdal 1.11.*
         - g2clib 1.6.*
         - hdfeos2
@@ -40,7 +40,7 @@ requirements:
         - libgcc
         - libnetcdf 4.4.*
         - hdf4
-        - proj.4 4.9.3
+        - proj4 4.9.3
         - gdal 1.11.*
         - libuuid [osx]
         - g2clib 1.6.*
