--- a/recipes/pyngl/meta.yaml
+++ b/recipes/pyngl/meta.yaml
@@ -20,7 +20,7 @@ requirements:
     build:
         - gcc
         - libnetcdf 4.4.*
-        - proj.4 4.9.3
+        - proj4 4.9.3
         - gdal 1.11.*
         - g2clib 1.6.*
         - hdfeos2
@@ -44,7 +44,7 @@ requirements:
     run:
         - libgcc
         - libnetcdf 4.4.*
-        - proj.4 4.9.3
+        - proj4 4.9.3
         - gdal 1.11.*
         - g2clib 1.6.*
         - hdfeos2
