Modified git_rev from "master" to "{{ commit }}"
Previously, building this recipe would result in an ambiguous development
snapshot. We would have had to assume which commit was used based on the
date-string of the package. Now the recipe uses a specific commit ID.

--- a/recipes/ncl/meta.yaml
+++ b/recipes/ncl/meta.yaml
@@ -1,6 +1,7 @@
 {% set ver = "6.4.0" %}
 {% set beta = "beta20161111" %}
 {% set version = ver + "_" + beta %}
+{% set commit = "c54cc32b573c14b2e383d30a686745d78521595e" %}
 
 package:
     name: ncl
@@ -8,7 +9,7 @@ package:
 
 source:
     git_url: git@github.com:NCAR/ncl.git
-    git_rev: master
+    git_rev: {{ commit }}
 
 build:
     number: 0
